welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: not found: value estSurbiscuit
if(estSurbiscuit==true){
   ^Program:10: error: not found: value nbPas
		if(nbPas - i > 0){
                   ^Program:13: error: not found: value nbPas
		if(nbPas=i){
                   ^